fixed z-index of side drawer

--- a/src/components/Nav/SideDrawer.module.css
+++ b/src/components/Nav/SideDrawer.module.css
@@ -6,7 +6,7 @@
   left: 0;
   width: 70%;
   max-width: 400px;
-  z-index: 200;
+  z-index: 1000;
   list-style: none;
   display: flex;
   flex-direction: column;
